@@ -240,12 +240,11 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkRadioMenuItem" id="full_view1">
+	    <widget class="GtkCheckMenuItem" id="full_view1">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Full screen</property>
 	      <property name="use_underline">True</property>
 	      <property name="active">False</property>
-	      <property name="group">normal_view1</property>
 	      <signal name="activate" handler="on_full_screen1_activate"/>
 	    </widget>
 	  </child>
@@ -355,7 +354,7 @@
 	      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image34">
+		<widget class="GtkImage" id="image38">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -378,7 +377,7 @@
 	      <accelerator key="M" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image35">
+		<widget class="GtkImage" id="image39">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-index</property>
 		  <property name="icon_size">1</property>
@@ -469,7 +468,7 @@
 	      <signal name="activate" handler="on_bugreport1_activate" last_modification_time="Sun, 20 Feb 2005 17:58:57 GMT"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image36">
+		<widget class="GtkImage" id="image40">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-execute</property>
 		  <property name="icon_size">1</property>
